# Axon-Protocol

./: .gitignore  README.md
axon-cli/: README.md  pyproject.toml
axon-cli/axon_cli/: __init__.py  config.py  display.py  http.py  main.py
axon-cli/axon_cli/commands/: __init__.py  agent.py  init.py  lock.py  memory.py  message.py  receipt.py
axon-cli/tests/: test_cli.py
axon-core/: .env.example  Dockerfile  README.md  axon-protocol-server-0.1.0.tgz  docker-compose.yml  package.json  pyproject.toml  requirements.txt  terminate_backends.py
axon-core/alembic/: env.py
axon-core/alembic/versions/: 242e88a38b1f_add_saas_tables.py  850b5ac488b1_link_projects_and_cleanup_agents.py  cbde164faa39_initial_tables.py  ea0f85b7364b_add_messages_table.py
axon-core/app/: __init__.py  cli.py  config.py  database.py  main.py
axon-core/app/middleware/: auth.py  billing.py
axon-core/app/models/: __init__.py  agent.py  lock.py  memory.py  message.py  project.py  receipt.py  subscription.py  user.py
axon-core/app/routes/: agents.py  auth.py  billing.py  coordination.py  dashboard_projects.py  events.py  health.py  memory.py  messages.py  receipts.py
axon-core/app/schemas/: agent.py  auth.py  lock.py  memory.py  message.py  receipt.py
axon-core/app/services/: embedding.py  hashing.py  lock_manager.py  pubsub.py  search.py
axon-core/app/static/: index.html
axon-core/app/static/assets/: index-2p0KzT8I.css  index-AQ4xKdCW.js  index-BVReBrkt.js  index-Bf2Rxt7I.js  index-BkfT3u35.css  index-BlDrrx3g.js  index-BrqY50bh.css  index-BubuII-R.js  index-C0d9gnMv.js  index-CBBGkvaU.js  index-CBG0HCCz.css  index-CEVjXCFz.js  index-Ci-EKFaj.css  index-DB5npNoc.css  index-Dh2LE9Ya.js  index-DnZmMeny.js  index-hi7hhOF9.css  index-hnToK1vk.js
axon-core/docs/: stripe_webhook_guide.md
axon-core/tests/: conftest.py  test_agents.py  test_coordination.py  test_memory.py  test_receipts.py  test_saas.py
axon-dashboard/: index.html  package-lock.json  package.json  vite.config.js
axon-dashboard/src/: api.js  main.js  router.js  state.js  ws.js
axon-dashboard/src/components/: empty-state.js  event-badge.js  header.js  loading-spinner.js  modal.js  sidebar.js  stats-card.js  toast.js
axon-dashboard/src/pages/: agents.js  billing.js  dashboard.js  docs.js  events.js  landing.js  locks.js  login.js  memories.js  messages.js  projects.js  receipt-detail.js  receipts.js
axon-dashboard/src/styles/: animations.css  components.css  docs.css  landing.css  layout.css  reset.css  variables.css
axon-dashboard/src/utils/: dom.js  format.js  particles.js
axon-mcp/: README.md  pyproject.toml
axon-mcp/axon_mcp/: __init__.py  server.py
axon-sdk-js/: README.md  package-lock.json  package.json  tsconfig.json
axon-sdk-js/src/: _base.ts  agents.ts  client.ts  coordination.ts  events.ts  exceptions.ts  index.ts  memory.ts  messages.ts  receipts.ts  types.ts
axon-sdk-js/src/integrations/: langchain.ts
axon-sdk-js/tests/: client.test.ts  messages.test.ts  test-e2e.ts
axon-sdk-python/: LICENSE  README.md  pyproject.toml  requirements.txt  shared_log.txt
axon-sdk-python/axon/: __init__.py  _base.py  client.py  coordination.py  events.py  exceptions.py  memory.py  messages.py  receipts.py  types.py
axon-sdk-python/axon/integrations/: __init__.py  crewai.py  langchain.py
axon-sdk-python/examples/: twin_agents_demo.py
axon-sdk-python/tests/: conftest.py  test_coordination.py  test_crewai.py  test_langchain.py  test_memory.py  test_messages.py  test_receipts.py
