[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "axon-cli"
version = "0.1.0"
description = "CLI tool for Axon Protocol — interact with your Axon server from the terminal"
readme = "README.md"
license = {text = "MIT"}
authors = [{name = "Sarthak Dhatrak", email = "sarthakmdhtr@gmail.com"}]
requires-python = ">=3.10"
dependencies = [
    "click>=8.1.0",
    "rich>=13.0.0",
    "httpx>=0.27.0",
]

[project.scripts]
axon = "axon_cli.main:cli"

[project.urls]
Homepage = "https://github.com/axon-protocol/axon-cli"

[tool.setuptools.packages.find]
where = ["."]
include = ["axon_cli*"]
