[project]
name = "axon-server"
version = "0.1.0"
description = "Core server for Axon Protocol - FastAPI backend for agentic memory, coordination, and receipts"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "sqlalchemy[asyncio]>=2.0.30",
    "asyncpg>=0.30.0",
    "alembic>=1.13.0",
    "pgvector>=0.3.0",
    "redis>=5.0.0",
    "sentence-transformers>=3.0.0",
    "pyjwt>=2.9.0",
    "passlib[bcrypt]>=1.7.4",
    "python-dotenv>=1.0.0",
    "httpx>=0.27.0",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.5.0",
    "bcrypt>=4.1.0",
    "stripe>=8.0.0",
    "aiosqlite>=0.20.0",
    "chromadb>=0.5.0",
]

[project.scripts]
axon-server = "app.cli:main"

[tool.setuptools]
packages = ["app"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.coverage.run]
source = ["app"]
omit = ["tests/*", "alembic/*"]
