[build-system]
requires = ["setuptools>=61.0.0"]
build-backend = "setuptools.build_meta"

[project]
name = "axon-mcp"
version = "0.1.0"
description = "Model Context Protocol (MCP) server for Axon Protocol"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "mcp>=0.1.0",
    "httpx>=0.27.0",
]

[project.scripts]
axon-mcp = "axon_mcp.server:main"
