[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "axon-protocol"
version = "0.1.0"
description = "Python SDK for Axon Protocol — persistent memory, coordination, and reasoning receipts for AI agents"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Sarthak Dhatrak", email = "sarthakmdhtr@gmail.com"}
]
keywords = ["ai", "agents", "memory", "coordination", "llm", "multiagent", "axon"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
requires-python = ">=3.10"
dependencies = [
    "httpx>=0.27.0",
    "websockets>=12.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "respx>=0.21.0",
]

[project.urls]
Homepage = "https://github.com/axon-protocol/axon-sdk-python"
Documentation = "https://docs.axon.so"
Repository = "https://github.com/axon-protocol/axon-sdk-python"
Issues = "https://github.com/axon-protocol/axon-sdk-python/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["axon*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
